[gd_scene load_steps=5 format=2]

[ext_resource path="res://turret.gd" type="Script" id=1]
[ext_resource path="res://enemyWalking_2.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 832.0

[node name="turret" type="KinematicBody2D" groups=[
"turret",
]]
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="shoot_freq" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="range"]
shape = SubResource( 1 )

[node name="bullets" type="Node2D" parent="."]

[connection signal="timeout" from="shoot_freq" to="." method="_on_shoot_freq_timeout"]
[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="range" to="." method="_on_range_body_exited"]
